--- a/Templates/servicios.html
+++ b/Templates/servicios.html
@@ -1,1 +1,174 @@
-<h2>Lista de áreas de servicio</h2>
+<div id="servicios" class="">
+  <section class="serviciosFirstSection">
+    <div class="background"></div>
+    <div class="background-texture"></div>
+    <div class="serviciosFirstSectionCategoriesTitle">
+      <h2 class="categories__title">Áreas de especialización</h2>
+    </div>
+    <section class="carousel">
+      <div class="carousel__container">
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="/Media/servicios/areas/derecho.jpg"
+            alt="people"
+          />
+          <div class="carousel-item__details">
+            <div class="controls">
+              <span class="fas fa-play-circle"></span>
+              <span class="fas fa-plus-circle"></span>
+            </div>
+            <h5 class="carousel-item__details--title">Derecho</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="/Media/servicios/areas/software.jpg"
+            alt="people"
+          />
+          <div class="carousel-item__details">
+            <div class="controls">
+              <span class="fas fa-play-circle"></span>
+              <span class="fas fa-plus-circle"></span>
+            </div>
+            <h5 class="carousel-item__details--title">
+              Programación <br />de Software
+            </h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="/Media/servicios/areas/contabilidad.jpg"
+            alt="people"
+          />
+          <div class="carousel-item__details">
+            <div class="controls">
+              <span class="fas fa-play-circle"></span>
+              <span class="fas fa-plus-circle"></span>
+            </div>
+            <h5 class="carousel-item__details--title">Contabilidad</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="/Media/servicios/areas/medicina.jpg"
+            alt="people"
+          />
+          <div class="carousel-item__details">
+            <div class="controls">
+              <span class="fas fa-play-circle"></span>
+              <span class="fas fa-plus-circle"></span>
+            </div>
+            <h5 class="carousel-item__details--title">Medicina</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="/Media/servicios/areas/arquitectura.jpg"
+            alt="people"
+          />
+          <div class="carousel-item__details">
+            <div class="controls">
+              <span class="fas fa-play-circle"></span>
+              <span class="fas fa-plus-circle"></span>
+            </div>
+            <h5 class="carousel-item__details--title">Arquitectura</h5>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="/Media/servicios/areas/ingenieria.jpg"
+            alt="people"
+          />
+          <div class="carousel-item__details">
+            <div class="controls">
+              <span class="fas fa-play-circle"></span>
+              <span class="fas fa-plus-circle"></span>
+            </div>
+            <h5 class="carousel-item__details--title">Ingeniería</h5>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="/Media/servicios/areas/ingles.jpg"
+            alt="people"
+          />
+          <div class="carousel-item__details">
+            <div class="controls">
+              <span class="fas fa-play-circle"></span>
+              <span class="fas fa-plus-circle"></span>
+            </div>
+            <h5 class="carousel-item__details--title">Inglés</h5>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="/Media/servicios/areas/psicologia.jpg"
+            alt="people"
+          />
+          <div class="carousel-item__details">
+            <div class="controls">
+              <span class="fas fa-play-circle"></span>
+              <span class="fas fa-plus-circle"></span>
+            </div>
+            <h5 class="carousel-item__details--title">Psicología</h5>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="/Media/servicios/areas/lenguaCastellana.jpg"
+            alt="people"
+          />
+          <div class="carousel-item__details">
+            <div class="controls">
+              <span class="fas fa-play-circle"></span>
+              <span class="fas fa-plus-circle"></span>
+            </div>
+            <h5 class="carousel-item__details--title">Lengua Castellana</h5>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="/Media/servicios/areas/pedagogia.jpg"
+            alt="people"
+          />
+          <div class="carousel-item__details">
+            <div class="controls">
+              <span class="fas fa-play-circle"></span>
+              <span class="fas fa-plus-circle"></span>
+            </div>
+            <h5 class="carousel-item__details--title">Pedagogía</h5>
+          </div>
+        </div>
+
+        <div class="carousel-item">
+          <img
+            class="carousel-item__img"
+            src="/Media/servicios/areas/gestionProyectos.jpg"
+            alt="people"
+          />
+          <div class="carousel-item__details">
+            <div class="controls">
+              <span class="fas fa-play-circle"></span>
+              <span class="fas fa-plus-circle"></span>
+            </div>
+            <h5 class="carousel-item__details--title">Gestión de Proyectos</h5>
+          </div>
+        </div>
+      </div>
+    </section>
+  </section>
+</div>
