--- a/Templates/servicios.html
+++ b/Templates/servicios.html
@@ -165,7 +165,9 @@
               <span class="fas fa-play-circle"></span>
               <span class="fas fa-plus-circle"></span>
             </div>
-            <h5 class="carousel-item__details--title">Gestión de Proyectos</h5>
+            <h5 class="carousel-item__details--title">
+              Gestión <br />de Proyectos
+            </h5>
           </div>
         </div>
       </div>
