--- a/Styles/servicios.css
+++ b/Styles/servicios.css
@@ -19,7 +19,7 @@
             left top,
             from(#0f0140e6),
             to(rgba(117, 63, 210, 0.9)));
-    background: linear-gradient(to top, #4a6eb0, #0799b6);
+    background: linear-gradient(to top, #4a6eb0, #f2e6cf);
     background-size: cover;
     width: 100%;
     height: 640px;
@@ -56,7 +56,7 @@
 }
 
 .categories__title {
-    color: #b4e1e2;
+    color: black;
     font-size: 28px;
     position: absolute;
 }
