--- a/Templates/servicios.html
+++ b/Templates/servicios.html
@@ -3,7 +3,9 @@
     <div class="background"></div>
     <div class="background-texture"></div>
     <div class="serviciosFirstSectionCategoriesTitle">
-      <h2 class="categories__title">Áreas de especialización</h2>
+      <h2 class="categories__title serviciosSecondSectionTitle">
+        Áreas de Especialización
+      </h2>
     </div>
     <section class="carousel">
       <div class="carousel__container">
@@ -172,5 +174,67 @@
         </div>
       </div>
     </section>
+  </section>
+
+  <section class="serviciosSecondSection">
+    <h2 class="serviciosSecondSectionTitle">Áreas de Servicio</h2>
+    <div class="serviciosSecondSectionContainer">
+      <div class="serviciosSecondSectionContainerText tesis">
+        <h2>Tesis</h2>
+        <p>
+          Documento académico que representa la culminación de un grado
+          universitario. La tesis es el resultado de un largo proceso de
+          investigación, donde el estudiante presenta y defiende una hipótesis
+          original. Debe ser defendida ante un comité académico y es fundamental
+          para la obtención del título.
+        </p>
+      </div>
+      <div class="serviciosSecondSectionContainerImg">
+        <img src="/Media/servicios/tesis.jpg" />
+      </div>
+    </div>
+    <div class="serviciosSecondSectionContainer articulo">
+      <div class="serviciosSecondSectionContainerText">
+        <h2>Articulos Científicos</h2>
+        <p>
+          Publicación que reporta resultados de una investigación científica y
+          es revisada por pares antes de su publicación. Su estructura facilita
+          la comprensión rápida del estudio realizado, y su validez y relevancia
+          son evaluadas por la comunidad científica.
+        </p>
+      </div>
+      <div class="serviciosSecondSectionContainerImg">
+        <img src="/Media/servicios/articuloCientifico.jpg" />
+      </div>
+    </div>
+    <div class="serviciosSecondSectionContainer monografia">
+      <div class="serviciosSecondSectionContainerText">
+        <h2>Monografías</h2>
+        <p>
+          Trabajo escrito enfocado en un tema específico dentro de una
+          disciplina académica. La monografía analiza, interpreta y presenta
+          información sobre ese tema, y es comúnmente utilizada para evaluar el
+          conocimiento de los estudiantes en un área particular de estudio.
+        </p>
+      </div>
+      <div class="serviciosSecondSectionContainerImg">
+        <img src="/Media/servicios/monografia.jpg" />
+      </div>
+    </div>
+    <div class="serviciosSecondSectionContainer investigacion">
+      <div class="serviciosSecondSectionContainerText">
+        <h2>Proyectos de Investigación</h2>
+        <p>
+          Esquema detallado para investigar una pregunta específica. Incluye la
+          formulación de hipótesis, desarrollo de metodologías, recolección y
+          análisis de datos, y la presentación de resultados. Los proyectos de
+          investigación son esenciales para el avance del conocimiento en
+          cualquier campo de estudio.
+        </p>
+      </div>
+      <div class="serviciosSecondSectionContainerImg">
+        <img src="/Media/servicios/investigacion.jpg" />
+      </div>
+    </div>
   </section>
 </div>
