--- a/Styles/servicios.css
+++ b/Styles/servicios.css
@@ -11,6 +11,7 @@
     position: absolute;
     z-index: 0;
     left: 0;
+    right: 0;
 }
 
 .background-texture {
@@ -26,6 +27,7 @@
     position: absolute;
     z-index: 0;
     left: 0;
+    right: 0;
 }
 
 .serviciosFirstSectionCategoriesTitle {
@@ -147,4 +149,137 @@
 .carousel-item__details--subtitle {
     color: #fff;
     margin: 0px 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+.serviciosSecondSection {
+    background-image: url("/Media/inicio/seccion\ 2\ responsive\ patron.png");
+    padding-top: 100px;
+    padding-left: 10px;
+    padding-right: 10px;
+    padding-bottom: 40px;
+    margin-top: 100px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+}
+
+.serviciosSecondSectionTitle {
+    font-size: 35px;
+    padding-bottom: 60px;
+}
+
+.serviciosSecondSectionContainer {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+}
+
+.tesis {
+    flex-direction: row;
+}
+
+.articulo {
+    flex-direction: row-reverse;
+}
+
+.monografia {
+    flex-direction: row;
+}
+
+.investigacion {
+    flex-direction: row-reverse;
+}
+
+.serviciosSecondSectionContainerText {
+    width: 400px;
+    min-width: 400px;
+    font-size: 20px;
+    padding: 30px;
+}
+
+.serviciosSecondSectionContainerText h2 {
+    padding-bottom: 10px;
+}
+
+
+.serviciosSecondSectionContainerImg {
+    border-radius: 1000px;
+    width: 400px;
+    min-width: 400px;
+}
+.serviciosSecondSectionContainerImg img {
+    width: 100%;
+    min-width: 300px;
+    border-radius: 1000px;
+}
+
+
+@media only screen and (max-width: 850px) {
+    .serviciosSecondSectionContainerText {
+        width: 300px;
+        min-width: 300px;
+        font-size: 18px;
+    }
+
+    .serviciosSecondSectionContainerImg {
+        width: 300px;
+        min-width: 300px;
+    }
+    .serviciosSecondSectionContainerImg img {
+        min-width: 300px;
+    }
+}
+
+@media only screen and (max-width: 644px) {
+    .serviciosSecondSectionContainerText {
+        width: 270px;
+        min-width: 270px;
+    }
+
+    .serviciosSecondSectionContainerImg {
+        width: 230px;
+        min-width: 230px;
+    }
+    .serviciosSecondSectionContainerImg img {
+        min-width: 230px;
+    }
+}
+
+@media only screen and (max-width: 536px) {
+    .serviciosSecondSectionContainerText {
+        width: 260px;
+        min-width: 260px;
+    }
+
+    .serviciosSecondSectionContainerImg {
+        width: 150px;
+        min-width: 150px;
+    }
+    .serviciosSecondSectionContainerImg img {
+        min-width: 150px;
+    }
+}
+
+@media only screen and (max-width: 536px) {
+    .serviciosSecondSectionTitle {
+        font-size: 22px;
+    }
+    .serviciosSecondSectionContainerImg {
+        display: none;
+    }
+    
 }
