--- a/Templates/servicios.html
+++ b/Templates/servicios.html
@@ -237,4 +237,23 @@
       </div>
     </div>
   </section>
+
+  <section class="serviciosThirdSection">
+    <div class="serviciosThirdSectionImg">
+      <img src="/Media/servicios/ultimaEstudiante.webp" />
+    </div>
+    <div class="serviciosThirdSectionText">
+      <h2>Compromiso con la Excelencia</h2>
+      <p>
+        Entendemos la importancia de entregar trabajos universitarios de
+        calidad. Por ello, nos comprometemos a garantizar la excelencia y
+        superar tus expectativas en cada proyecto. Nuestro equipo experto, con
+        años de experiencia y dedicación a la integridad académica, está
+        preparado para afrontar cualquier desafío, asegurando originalidad y
+        profesionalismo. Al elegirnos, te unes a una comunidad enfocada en el
+        éxito académico y recibes apoyo constante hasta la entrega final, ¡Te
+        esperamos!.
+      </p>
+    </div>
+  </section>
 </div>
