--- a/Styles/servicios.css
+++ b/Styles/servicios.css
@@ -283,3 +283,54 @@
     }
     
 }
+
+
+.serviciosThirdSection {
+    width: 100%;
+    padding: 50px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+
+.serviciosThirdSectionImg {
+    width: 550px;
+}
+
+.serviciosThirdSectionImg img {
+    border: solid 1.5px #4a6eb0;
+    border-radius: 100px;
+    width: 550px;
+}
+
+.serviciosThirdSectionText {
+    display: flex;
+    flex-direction: column;
+    width: 500px;
+}
+.serviciosThirdSectionText h2 {
+    padding-top: 12px;
+    padding-bottom: 10px;
+    color: #4a6eb0;
+}
+
+.serviciosThirdSectionText p {
+    font-size: 19px;
+}
+
+@media only screen and (max-width: 644px) {
+    .serviciosThirdSection {
+        padding: 18px;
+    }
+    .serviciosThirdSectionImg {
+        width: 260px;
+    }
+    .serviciosThirdSectionImg img {
+        width: 260px;
+    }
+    .serviciosThirdSectionText {
+        width: 100%;
+    }
+}
