--- a/Styles/servicios.css
+++ b/Styles/servicios.css
@@ -45,6 +45,7 @@
     overflow-x: scroll;
     padding: 30px;
     padding-top: 0px;
+    padding-bottom: 120px;
     position: relative;
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
@@ -163,11 +164,11 @@
 
 .serviciosSecondSection {
     background-image: url("/Media/inicio/seccion\ 2\ responsive\ patron.png");
-    padding-top: 100px;
+    padding-top: 140px;
     padding-left: 10px;
     padding-right: 10px;
     padding-bottom: 40px;
-    margin-top: 100px;
+    margin-top: 0px;
     width: 100%;
     display: flex;
     flex-direction: column;
