--- a/Styles/nav.css
+++ b/Styles/nav.css
@@ -353,3 +353,259 @@ footer {
         min-width: 40px;
     }
 }
+
+
+
+
+/*GENERALES DE MODAL*/
+
+.chatContainer {
+    position: fixed;
+    left: 0;
+    bottom: 15%;
+    margin-top: 50px;
+    display: flex;
+    flex-direction: column;
+    margin-left: 10px;
+    width: 250px;
+}
+
+.botonModal {
+    margin-top: 5px;
+    width: 100%;
+}
+
+.botonCerrarModal {
+    margin-bottom: -11px;
+    align-self: flex-end;
+    width: 40px;
+    border-radius: 10px;
+    z-index: 1;
+    border: 0;
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease-in-out;
+}
+
+.botonCerrarModal button {
+    box-shadow: 1px 1px 4px rgb(252, 72, 72);
+    cursor: pointer;
+    border-radius: 10px;
+    background-color: rgb(61, 165, 87);
+    width: 100%;
+    border: 0;
+}
+
+.botonCerrarModal button svg {
+    width: 80%;
+    height: 80%;
+}
+
+.chatModal { 
+    border: 1px solid black;
+    border-radius: 5px;
+    width: 100%;
+    background-image: url("/Media/general/whatsaapModal/patronChat.jpeg");
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity 0.3s ease-in-out;
+}
+
+svg {
+    color: white;
+    width: 18px;
+}
+
+.chatModalImg {
+    width: 38px;
+    height: 35px;
+    border-radius: 10000px;
+}
+
+.chatModalImg img {
+    border: 1px solid #005e558a;
+    width: 38px;
+    height: 35px;
+    border-radius: 1000px;
+}
+
+.botonModal {
+    background-color: transparent;
+    width: 60px;
+    border-radius: 1000px;
+    border: none;
+}
+
+.botonModal button {
+    background-color: transparent;
+}
+
+.botonModal button, .botonModal button img {
+    cursor: pointer;
+    width: 60px;
+    border-radius: 1000px;
+    border: none;
+}
+
+
+/* HEADER CHAT */
+
+.chatModal header {
+    border-radius: 5px 5px 0 0;
+    background-color: #005e54;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 5px;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.4);
+}
+
+.chatModalContacto {
+    width: 150px;
+    display: flex;
+    flex-direction: row;
+}
+
+.chatModalContactoUser {
+    padding-top: 3px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding-left: 5px;
+    text-align: left;
+    color: white;
+}
+
+.chatModalContactoUser h2 {
+    line-height: 10px;
+    font-size: 15px;
+}
+
+.chatModalContactoUser span {
+    font-size: 11.5px;
+}
+
+.chatModalBotones {
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    width: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+
+.Llamada {
+    margin-left: 7px;
+}
+
+
+/* Body chat */
+
+.chatModal section {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    padding-top: 16px;
+    .mensajeCliente {
+        align-self: flex-end;
+    };
+    .mensajeCeac {
+        align-self: flex-start;
+    };
+}
+
+.mensajeCliente {
+    background-color: #e1ffc7;
+    border-radius: 50px 10px 150px 50px;
+    padding: 10px;
+    width: 80px;
+    border: 1px solid #005e54;
+}
+
+.mensajeCeacChild {
+    margin-top: 12px;
+    background-color: #e1ffc7;
+    border-radius: 10px 50px 50px 100px;
+    padding: 10px;
+    padding-bottom: 10px;
+    width: 190px;
+    background-color: white;
+    text-align: center;
+    border: 1px solid #005e54;
+}
+
+
+
+/*FOOTER*/
+
+.chatModal footer {
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    background-color: transparent;
+    margin-left: 0px;
+    margin-top: 10px;
+    padding-bottom: 10px;
+}
+
+.footerMensaje {
+    width: 160px;
+    height: 47px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    border-radius: 15px;
+    margin-top: 10px;
+    padding: 5px;
+    background-color: white;
+}
+
+.footerMensajeText {
+    height: 100%;
+    p {
+        height: 100%;
+    }
+}
+
+.footerMensajeEmojis svg {
+    color: #858585;
+}
+.footerMensajeCamara svg {
+    color: rgb(110, 110, 110);
+}
+
+.footerEnviar {
+    width: 90px;
+    margin-left: 10px;
+    margin-top: 12px;
+    height: 47px;
+    background-color: #008a7c;
+    border-radius: 1000px;
+}
+
+.footerEnviar div {
+    width: 100%;
+    height: 100%;
+}
+.footerEnviarLink {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    width: 100%;
+    height: 100%;
+}
+.footerEnviarLink svg {
+    color: white;
+    width: 75%;
+    height: 75%;
+}
+
+.mostrarChatModal {
+    opacity: 1;
+    visibility: visible;
+}
