--- a/Styles/nav.css
+++ b/Styles/nav.css
@@ -553,7 +553,7 @@ svg {
 
 .footerMensaje {
     width: 160px;
-    height: 47px;
+    min-height: 47px;
     display: flex;
     flex-direction: row;
     align-items: center;
