convert images to webp

--- a/Styles/inicio.css
+++ b/Styles/inicio.css
@@ -22,7 +22,7 @@
     padding-top: 20px;
     padding-bottom: 20px;
     margin-top: 10px;
-    background-image: url("/Media/inicio/seccion\ 1\ inicio\ opacity\ 053.png");
+    background-image: url("/Media/inicio/seccion\ 1\ inicio\ web.webp");
     background-size: cover;
     background-repeat: no-repeat;
 }
