--- a/Styles/conocenos.css
+++ b/Styles/conocenos.css
@@ -8,7 +8,7 @@
     justify-content: center;
     text-align: center;
     position: relative;
-    background-image: url("/Media/conocenos/conocenosDiploma.png");
+    background-image: url("/Media/conocenos/conocenosDiplomaWeb.webp");
     background-color: rgba(255, 0, 0, 0.5);
     background-size: cover;
     background-repeat: no-repeat;
