--- a/Templates/inicio.html
+++ b/Templates/inicio.html
@@ -9,75 +9,83 @@
           </h3>
           <p class="textDivBody">
             Confía en nosotros para completar tu tesis y trabajos
-            universitarios. Nuestro equipo de expertos está listo
-            para ayudarte a alcanzar el éxito académico
+            universitarios. Nuestro equipo de expertos está listo para ayudarte
+            a alcanzar el éxito académico
           </p>
         </div>
         <div class="boxInfoDivs">
           <div class="boxInfoDivOne">
-            <img src="/Media/inicio/seccion 1 cubos.png">
-            <p class="boxInfoDivsSubtitle">
-              Calidad garantizada
-            </p>
+            <img src="/Media/inicio/seccion 1 cubos.png" />
+            <p class="boxInfoDivsSubtitle">Calidad garantizada</p>
             <p class="boxInfoDivsText">
-              Entregamos trabajos de alta calidad que cumplen
-              con tus requisitos académicos y expectativas.
+              Entregamos trabajos de alta calidad que cumplen con tus requisitos
+              académicos y expectativas.
             </p>
           </div>
           <div class="boxInfoDivTwo">
-            <img src="/Media/inicio/seccion 1 cubos.png">
-            <p class="boxInfoDivsSubtitle">
-              Entrega puntual
-            </p>
+            <img src="/Media/inicio/seccion 1 cubos.png" />
+            <p class="boxInfoDivsSubtitle">Entrega puntual</p>
             <p class="boxInfoDivsText">
-              Cumplimos con los plazos establecidos para que
-              puedas entregar tus trabajos a tiempo.
+              Cumplimos con los plazos establecidos para que puedas entregar tus
+              trabajos a tiempo.
             </p>
           </div>
         </div>
       </div>
       <div class="secondSectionImage">
-        <img src="/Media/inicio/seccion 1 inicio.jpg">
+        <img src="/Media/inicio/seccion 1 inicio no opacity web.webp" />
       </div>
     </div>
   </section>
 
   <!-- Segunda sección -->
   <section class="secondSection">
-    <div class="secondSectionSeparator">
-
-    </div>
+    <div class="secondSectionSeparator"></div>
     <div class="secondSectionBody">
       <div class="secondSectionUp">
         <div class="secondSectionLeffText">
-          <p><span>Nuestra pasión</span> por la excelencia académica se refleja en todo lo que hacemos. Creemos que cada
-            tarea,
-            ensayo o proyecto académico es una oportunidad para demostrar nuestra dedicación a la calidad, la integridad
-            y la excelencia en el servicio al cliente.</p>
+          <p>
+            <span>Nuestra pasión</span> por la excelencia académica se refleja
+            en todo lo que hacemos. Creemos que cada tarea, ensayo o proyecto
+            académico es una oportunidad para demostrar nuestra dedicación a la
+            calidad, la integridad y la excelencia en el servicio al cliente.
+          </p>
         </div>
         <div class="secondSectionRightCards">
           <article class="card">
-            <img class="card__background" src="/Media/inicio/seccion 2 righ vision.jpg" width="1920" height="2193" />
+            <img
+              class="card__background"
+              src="/Media/inicio/seccion 2 righ vision.jpg"
+              width="1920"
+              height="2193"
+            />
             <div class="card__content | flow">
               <div class="card__content--container | flow">
                 <h2 class="card__title">Visión</h2>
                 <p class="card__description">
-                  Ser la principal opción para estudiantes universitarios en busca de servicios de redacción, destacando
-                  por nuestra calidad excepcional, compromiso con la integridad académica y apoyo integral para el éxito
-                  educativo.
+                  Ser la principal opción para estudiantes universitarios en
+                  busca de servicios de redacción, destacando por nuestra
+                  calidad excepcional, compromiso con la integridad académica y
+                  apoyo integral para el éxito educativo.
                 </p>
               </div>
             </div>
           </article>
           <article class="card">
-            <img class="card__background" src="/Media/inicio/seccion 2 righ mision.jpg" width="1920" height="2193" />
+            <img
+              class="card__background"
+              src="/Media/inicio/seccion 2 righ mision.jpg"
+              width="1920"
+              height="2193"
+            />
             <div class="card__content | flow">
               <div class="card__content--container | flow">
                 <h2 class="card__title">Misión</h2>
                 <p class="card__description">
-                  Brindar servicios éticos y de calidad en redacción académica, apoyando a los universitarios en sus
-                  metas educativas. Ofrecemos trabajos personalizados, confiables y puntuales, basados en la confianza y
-                  la excelencia.
+                  Brindar servicios éticos y de calidad en redacción académica,
+                  apoyando a los universitarios en sus metas educativas.
+                  Ofrecemos trabajos personalizados, confiables y puntuales,
+                  basados en la confianza y la excelencia.
                 </p>
               </div>
             </div>
@@ -85,9 +93,7 @@
         </div>
       </div>
     </div>
-    <div class="secondSectionSeparator separatorDown">
-
-    </div>
+    <div class="secondSectionSeparator separatorDown"></div>
   </section>
   <!-- Tercera sección -->
   <section class="sectionThree">
@@ -99,45 +105,71 @@
       <div class="slider">
         <div class="item">
           <h3>Excelencia académica</h3>
-          <p>Nuestros trabajos cumplen rigurosos estándares de calidad. Somos expertos en redacción
-            académica por lo que garantizamos que cada trabajo sea impecable, bien investigado y cumpla con las normas
-            académicas requeridas.</p>
+          <p>
+            Nuestros trabajos cumplen rigurosos estándares de calidad. Somos
+            expertos en redacción académica por lo que garantizamos que cada
+            trabajo sea impecable, bien investigado y cumpla con las normas
+            académicas requeridas.
+          </p>
         </div>
         <div class="item">
           <h3>Autenticidad asegurada</h3>
-          <p>Nos comprometemos a proporcionar trabajos totalmente originales, libres de plagio. En CEAC, cada trabajo se
-            crea desde cero para asegurar la autenticidad y la integridad académica.</p>
+          <p>
+            Nos comprometemos a proporcionar trabajos totalmente originales,
+            libres de plagio. En CEAC, cada trabajo se crea desde cero para
+            asegurar la autenticidad y la integridad académica.
+          </p>
         </div>
         <div class="item">
           <h3>Cumplimiento de plazos</h3>
-          <p>Sabemos lo importante que es cumplir los plazos académicos. Nuestros servicios te permiten estar seguro de
-            tus trabajos se entregarán puntualmente, permitiéndote cumplir tus compromisos académicos oportuna.</p>
+          <p>
+            Sabemos lo importante que es cumplir los plazos académicos. Nuestros
+            servicios te permiten estar seguro de tus trabajos se entregarán
+            puntualmente, permitiéndote cumplir tus compromisos académicos
+            oportuna.
+          </p>
         </div>
         <div class="item">
           <h3>Atención personalizada</h3>
-          <p>Tu satisfacción es nuestra prioridad. Nuestro equipo de atención al cliente está disponible para brindarte
-            asistencia personalizada en cualquier etapa del proceso, garantizando una experiencia fluida y sin
-            contratiempos.</p>
+          <p>
+            Tu satisfacción es nuestra prioridad. Nuestro equipo de atención al
+            cliente está disponible para brindarte asistencia personalizada en
+            cualquier etapa del proceso, garantizando una experiencia fluida y
+            sin contratiempos.
+          </p>
         </div>
         <div class="item">
           <h3>Soporte y seguimiento</h3>
-          <p>Te asistimos en todo el proceso de tu trabajo. Estamos disponibles para atender tus consultas o avances. Te
-            informamos sobre tu proyecto y te apoyamos hasta tu satisfacción.</p>
+          <p>
+            Te asistimos en todo el proceso de tu trabajo. Estamos disponibles
+            para atender tus consultas o avances. Te informamos sobre tu
+            proyecto y te apoyamos hasta tu satisfacción.
+          </p>
         </div>
         <div class="item">
           <h3>Privacidad y seguridad</h3>
-          <p>Respetamos la confidencialidad y protegemos tus datos. No compartimos tu información con
-            terceros ni
-            la usamos para fines ajenos a nuestros servicios. Además, encriptamos y aseguramos tus trabajos.</p>
+          <p>
+            Respetamos la confidencialidad y protegemos tus datos. No
+            compartimos tu información con terceros ni la usamos para fines
+            ajenos a nuestros servicios. Además, encriptamos y aseguramos tus
+            trabajos.
+          </p>
         </div>
         <div class="item">
           <h3>Aprendizaje y crecimiento</h3>
-          <p>No solo te entregamos un trabajo de calidad, también te brindamos retroalimentación y orientación
-            para que mejores tus habilidades investigativas. Con nosotros, podrás aprender y crecer exponencialmente.
+          <p>
+            No solo te entregamos un trabajo de calidad, también te brindamos
+            retroalimentación y orientación para que mejores tus habilidades
+            investigativas. Con nosotros, podrás aprender y crecer
+            exponencialmente.
           </p>
         </div>
-        <button id="next"><img src="/Media/inicio/flechas-a-derecha.png"></button>
-        <button id="prev"><img src="/Media/inicio/flechas-a-izquierda.png"></button>
+        <button id="next">
+          <img src="/Media/inicio/flechas-a-derecha.png" />
+        </button>
+        <button id="prev">
+          <img src="/Media/inicio/flechas-a-izquierda.png" />
+        </button>
       </div>
     </div>
   </section>
