--- a/Styles/conocenos.css
+++ b/Styles/conocenos.css
@@ -70,11 +70,13 @@
 }
 
 .conocenosSecondSectionContainerVideo {
+    z-index: 999;
     width: 602px;
     height: 339px;
 }
 
 .conocenosSecondSectionContainerVideo video {
+    z-index: 999;
     border-radius: 15px;
     width: 100%;
     height: 100%;
